--- a/web/fim-web/app/welcome/styles.css
+++ b/web/fim-web/app/welcome/styles.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -21,9 +22,9 @@ main.relative {
   left: 0;
   width: 100%;
   height: 100%;
-  transform: scale(1.1);   /* 拡大率を上げてぼかしの端切れを防ぐ */
-  filter: blur(4px);      /* ぼかし量を増やす */
-  opacity: 0.5;            /* 透明度を下げてさらに薄く */
+  transform: scale(1.1); /* 拡大率を上げてぼかしの端切れを防ぐ */
+  filter: blur(4px); /* ぼかし量を増やす */
+  opacity: 0.5; /* 透明度を下げてさらに薄く */
   z-index: -2;
 }
 
